chore: Update justify-content property in tus-rutinas.page.scss to fix alignment issue

--- a/src/app/tus-rutinas/tus-rutinas.page.scss
+++ b/src/app/tus-rutinas/tus-rutinas.page.scss
@@ -93,7 +93,7 @@ ion-label {
 
 .edit {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   margin: 0px;
   padding: 0px;
 }
